--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ packages = batman
 [options.entry_points]
 console_scripts =
     batman-convert = batman.bat_to_tackle:convert
-    batman-dry-run = mypackage.mymodule:dry_run
+    batman-hello = batman.bat_to_tackle:hello
