--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,5 @@ packages = batman
 
 [options.entry_points]
 console_scripts =
-    batman-convert = batman.bat_to_tackle:convert
-    batman-hello = batman.bat_to_tackle:hello
+    batman-usage = batman.batman:Batman.usage
+    batman-convert = batman.convert:main
